CheckPoint - cg50ce5782

--- a/automation_backend/appsettings.json
+++ b/automation_backend/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ManagementDb": "Server=localhost;Database=management_db;User Id=sa;Password=Your_password123;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "dev-secret-please-change",
+    "Issuer": "automation_backend",
+    "Audience": "automation_frontend"
+  }
 }
